adds tables of contents, fixes rss link
Fixes #9.

--- a/applied-modern-cxx-00.html
+++ b/applied-modern-cxx-00.html
@@ -2,16 +2,6 @@
 <html >
 <head>
 
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HPGZG0F5PP"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'G-HPGZG0F5PP');
-	</script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!--[if lt IE 9]>
                 <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
@@ -58,6 +48,10 @@
   <style type="text/css">code{white-space: pre;}</style>
   <style type="text/css">body { font-family: Domine, Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif} h1, h2, h3, h4, h5, h6 { font-family: Montserrat, sans }</style>
   <link rel="stylesheet" href="style.css" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HPGZG0F5PP"></script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date());
+  gtag('config', 'G-HPGZG0F5PP'); </script>
   <meta name="keywords" content="C++, cplusplus, cpp, cxx" />
   <meta name="description" content="Applied Modern C++ table of contents" />
 </head>
@@ -79,7 +73,7 @@
       <div class="row">
             <div class="col-12">
 
-
+      
       <h1 id="table-of-contents">Table of contents</h1>
 <h2 id="section-1-using-abstractions">Section 1: Using abstractions</h2>
 <h3 id="module-1-c-fundamentals">Module 1: C++ Fundamentals</h3>
@@ -88,7 +82,7 @@
 <li><a href="applied-modern-cxx-02.html">Hello, C++!</a></li>
 <li>Types, objects, values</li>
 <li>Type conversions</li>
-<li>Functions, scope, object lifetime</li>
+<li>Functions; scope and object lifetime</li>
 <li>Useful algorithms</li>
 <li>C++ is a value-oriented language</li>
 <li>Control flow</li>
