--- a/applied-modern-cxx-02.html
+++ b/applied-modern-cxx-02.html
@@ -147,7 +147,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <a href="applied-modern-cxx-00.html">Table of contents</a>
 </div>
 <div class="table-cell" style="text-align: right;">
-
+<a href="applied-modern-cxx-03.html">Chapter 3: Simple types and objects</a>
 </div>
 </div>
 </div>
@@ -284,7 +284,7 @@ It is 2022-12-30.</code></pre>
 <a href="applied-modern-cxx-00.html">Table of contents</a>
 </div>
 <div class="table-cell" style="text-align: right;">
-
+<a href="applied-modern-cxx-03.html">Chapter 3: Simple types and objects</a>
 </div>
 </div>
 </div>
