--- a/applied-modern-cxx-00.html
+++ b/applied-modern-cxx-00.html
@@ -92,18 +92,7 @@ function countdown_timer(datetime, element_id) {
 <li><a href="applied-modern-cxx-01.html">Introduction</a></li>
 <li><a href="applied-modern-cxx-02.html">Hello, C++!</a></li>
 <li><a href="applied-modern-cxx-03.html">Simple types and objects</a></li>
-<li><div class="fixed-table">
-<div class="table-row-group">
-<div class="table-row">
-<div class="table-cell">
-Type conversions
-</div>
-<div id="4" class="table-cell">
-<script>countdown_timer("2023-02-13 15:00+0000", "4")</script>
-</div>
-</div>
-</div>
-</div></li>
+<li><a href="applied-modern-cxx-04.html">Conversions</a></li>
 <li><div class="fixed-table">
 <div class="table-row-group">
 <div class="table-row">
@@ -111,7 +100,7 @@ Type conversions
 Functions
 </div>
 <div id="5" class="table-cell">
-<script>countdown_timer("2023-02-27 15:00+0000", "5")</script>
+<script>countdown_timer("2023-02-27 08:00+0000", "5")</script>
 </div>
 </div>
 </div>
@@ -123,7 +112,7 @@ Functions
 C++ is a value-oriented language
 </div>
 <div id="6" class="table-cell">
-<script>countdown_timer("2023-03-13 15:00+0000", "6")</script>
+<script>countdown_timer("2023-03-13 08:00+0000", "6")</script>
 </div>
 </div>
 </div>
@@ -135,7 +124,7 @@ C++ is a value-oriented language
 Control flow
 </div>
 <div id="7" class="table-cell">
-<script>countdown_timer("2023-03-27 15:00+0000", "7")</script>
+<script>countdown_timer("2023-03-27 08:00+0000", "7")</script>
 </div>
 </div>
 </div>
@@ -147,7 +136,7 @@ Control flow
 Useful algorithms
 </div>
 <div id="8" class="table-cell">
-<script>countdown_timer("2023-04-10 15:00+0000", "8")</script>
+<script>countdown_timer("2023-04-10 08:00+0000", "8")</script>
 </div>
 </div>
 </div>
@@ -159,7 +148,7 @@ Useful algorithms
 Error handling
 </div>
 <div id="9" class="table-cell">
-<script>countdown_timer("2023-04-24 15:00+0000", "9")</script>
+<script>countdown_timer("2023-04-24 08:00+0000", "9")</script>
 </div>
 </div>
 </div>
@@ -171,7 +160,7 @@ Error handling
 Simple I/O
 </div>
 <div id="10" class="table-cell">
-<script>countdown_timer("2023-05-08 15:00+0000", "10")</script>
+<script>countdown_timer("2023-05-08 08:00+0000", "10")</script>
 </div>
 </div>
 </div>
@@ -183,7 +172,7 @@ Simple I/O
 Data transformations
 </div>
 <div id="11" class="table-cell">
-<script>countdown_timer("2023-05-22 15:00+0000", "11")</script>
+<script>countdown_timer("2023-05-22 08:00+0000", "11")</script>
 </div>
 </div>
 </div>
