--- a/applied-modern-cxx-05.html
+++ b/applied-modern-cxx-05.html
@@ -162,8 +162,7 @@ language</a>
 </div>
 </div>
 </div>
-<h1 id="functions-scope-and-object-lifetime">Functions; scope and object
-lifetime</h1>
+<h1 id="functions">Functions</h1>
 <p>Functions—sometimes known as subroutines—allow us to package code
 into a named operation that makes it available for reuse. We’ve already
 defined one function in Chapters 2 and 4: the nullary function
@@ -173,8 +172,7 @@ their subtleties), how C++ models functions, and the lifetime of
 objects.</p>
 <h2 id="table-of-contents">Table of contents</h2>
 <ol type="1">
-<li><a href="#functions-scope-and-object-lifetime">Functions; scope and
-object lifetime</a>
+<li><a href="#functions">Functions</a>
 <ol type="1">
 <li><a href="#table-of-contents">Table of contents</a></li>
 <li><a href="#objectives-and-outcomes">Objectives and outcomes</a></li>
