delays all chapters

--- a/applied-modern-cxx-00.html
+++ b/applied-modern-cxx-00.html
@@ -108,8 +108,7 @@ objects</a></li>
 C++ is a value-oriented language
 </div>
 <div id="6" class="table-cell">
-<script>countdown_timer("2023-03-13 08:00+0000", "7")</script>
-</script>
+Delayed</script>
 </div>
 </div>
 </div>
@@ -121,7 +120,7 @@ C++ is a value-oriented language
 Control flow
 </div>
 <div id="7" class="table-cell">
-<script>countdown_timer("2023-03-27 08:00+0000", "7")</script>
+Delayed
 </div>
 </div>
 </div>
@@ -133,7 +132,7 @@ Control flow
 Problem solving with algorithms
 </div>
 <div id="8" class="table-cell">
-<script>countdown_timer("2023-04-10 08:00+0000", "8")</script>
+Delayed
 </div>
 </div>
 </div>
@@ -145,7 +144,7 @@ Problem solving with algorithms
 Error handling
 </div>
 <div id="9" class="table-cell">
-<script>countdown_timer("2023-04-24 08:00+0000", "9")</script>
+Delayed
 </div>
 </div>
 </div>
@@ -157,7 +156,7 @@ Error handling
 Simple I/O
 </div>
 <div id="10" class="table-cell">
-<script>countdown_timer("2023-05-08 08:00+0000", "10")</script>
+Delayed
 </div>
 </div>
 </div>
@@ -169,7 +168,7 @@ Simple I/O
 Data transformations
 </div>
 <div id="11" class="table-cell">
-<script>countdown_timer("2023-05-22 08:00+0000", "11")</script>
+Delayed
 </div>
 </div>
 </div>
