--- a/applied-modern-cxx-00.html
+++ b/applied-modern-cxx-00.html
@@ -105,10 +105,10 @@ objects</a></li>
 <div class="table-row-group">
 <div class="table-row">
 <div class="table-cell">
-C++ is a value-oriented language
+User-defined types and scope
 </div>
 <div id="6" class="table-cell">
-Delayed</script>
+<script>countdown_timer("2023-03-27 08:00+0000",  "6");</script>
 </div>
 </div>
 </div>
@@ -120,7 +120,7 @@ Delayed</script>
 Control flow
 </div>
 <div id="7" class="table-cell">
-Delayed
+<script>countdown_timer("2023-04-17 08:00+0000",  "7");</script>
 </div>
 </div>
 </div>
@@ -132,7 +132,7 @@ Delayed
 Problem solving with algorithms
 </div>
 <div id="8" class="table-cell">
-Delayed
+<script>countdown_timer("2023-05-08 08:00+0000",  "8");</script>
 </div>
 </div>
 </div>
@@ -144,7 +144,7 @@ Delayed
 Error handling
 </div>
 <div id="9" class="table-cell">
-Delayed
+<script>countdown_timer("2023-05-29 08:00+0000",  "9");</script>
 </div>
 </div>
 </div>
@@ -156,7 +156,7 @@ Delayed
 Simple I/O
 </div>
 <div id="10" class="table-cell">
-Delayed
+<script>countdown_timer("2023-06-19 08:00+0000", "10");</script>
 </div>
 </div>
 </div>
@@ -168,7 +168,7 @@ Delayed
 Data transformations
 </div>
 <div id="11" class="table-cell">
-Delayed
+<script>countdown_timer("2023-07-10 08:00+0000", "11");</script>
 </div>
 </div>
 </div>
